--- a/_config.yml
+++ b/_config.yml
@@ -54,8 +54,8 @@ rss_icon: false
 navbar_fixed: true
 footer_fixed: true
 
-# Dimensions
-max_width: 800px
+# Dimensions ; default was 800px
+max_width: 1000px
 
 # TODO: add layout settings (single page vs. multi-page)
 
