--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ last_name: Panakkal
 email: pranavesh@rice.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
-footer_text:
+footer_text: >
+  Photos from <a href="https://www.wikimedia.org/" target="_blank">Wiki Media</a>.
 keywords: situational awareness, equity, smart resilience, infrastructure risk  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
