Added Dr. Bedient bio

--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -10,4 +10,7 @@
   - firstname: ["Elisa", "Elisa S. M."]
     url: http://workingresiliencelab.rice.edu/research-team/
 
+"Bedient":
+  - firstname: ["Philip", "P.", "P"]
+    url: https://profiles.rice.edu/faculty/philip-bedient
 
