--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -5,7 +5,7 @@
       value: Pranavesh Panakkal
 
 - title: Research Interests
-  type: text
+  type: list
   Situational awareness, digital twins, smart resilience, equity, 
 
 - title: Education
