--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,7 +15,7 @@
       institution: Rice University, Houston, Texas, US
       year: 2022
       description:
-        - title: Dissertation: Situational awareness frameworks for real-time sensing of flood impacts on road transportation networks.
+        - title: Situational awareness frameworks for real-time sensing of flood impacts on road transportation networks.
         - title: Proposed methods to sense real-time flood impacts on roads to facilitate safe and efficient mobility.
         - title: Conceptualized, developed, validated, and deployed reliable situational awareness tools.
 
