--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,45 +18,30 @@
         - Conceptualized, developed, validated, and deployed situational awareness frameworks for real-time sensing of flood impacts on road transportation networks.
 
     - title: Master of Technology in Structural Engineering
-      institution: Indian Institute of Technoloyg, Bombay, India
+      institution: IIT Bombay, India
       year: 2014
 
     - title: Bachelor of Technology in Civil Engineering
       institution: Government Engineering College, Kozhikode, India
-      year: 2014
+      year: 2010
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Postdoctoral Research
+      institution: Rice University, Houston, Texas
+      year: 2023 - Present
       description:
 
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+    - title: Researcher
+      institution: IIT Bombay
+      year: 2016-2017
+      description:
+
+    - title: Graduate Engineer
+      institution: Walter P. Moore
+      year: 2014-2016
+      description:
 
 - title: Open Source Projects
   type: time_table
